syntax = "proto3";

package astria.protocol.genesis.v1alpha1;

import "astria/primitive/v1/types.proto";
import "astria/protocol/fees/v1alpha1/types.proto";

message GenesisAppState {
  string chain_id = 1;
  AddressPrefixes address_prefixes = 2;
  repeated Account accounts = 3;
  astria.primitive.v1.Address authority_sudo_address = 4;
  astria.primitive.v1.Address ibc_sudo_address = 5;
  repeated astria.primitive.v1.Address ibc_relayer_addresses = 6;
  string native_asset_base_denomination = 7;
  IbcParameters ibc_parameters = 8;
  repeated string allowed_fee_assets = 9;
  GenesisFees fees = 10;
}

message Account {
  astria.primitive.v1.Address address = 1;
  astria.primitive.v1.Uint128 balance = 2;
}

message AddressPrefixes {
  // The base prefix used for most Astria Sequencer addresses.
  string base = 1;
  // The prefix used for sending ics20 transfers to IBC chains
  // that enforce a bech32 format of the packet sender.
  string ibc_compat = 2;
}

// IBC configuration data.
message IbcParameters {
  // Whether IBC (forming connections, processing IBC packets) is enabled.
  bool ibc_enabled = 1;
  // Whether inbound ICS-20 transfers are enabled
  bool inbound_ics20_transfers_enabled = 2;
  // Whether outbound ICS-20 transfers are enabled
  bool outbound_ics20_transfers_enabled = 3;
}

message GenesisFees {
  // Fee-bearing actions are defined on 1-19
  astria.protocol.fees.v1alpha1.TransferFeeComponents transfer = 1;
  astria.protocol.fees.v1alpha1.SequenceFeeComponents sequence = 2;
  astria.protocol.fees.v1alpha1.Ics20WithdrawalFeeComponents ics20_withdrawal = 3;
  astria.protocol.fees.v1alpha1.InitBridgeAccountFeeComponents init_bridge_account = 4;
  astria.protocol.fees.v1alpha1.BridgeLockFeeComponents bridge_lock = 5;
  astria.protocol.fees.v1alpha1.BridgeUnlockFeeComponents bridge_unlock = 6;
  astria.protocol.fees.v1alpha1.BridgeSudoChangeFeeComponents bridge_sudo_change = 7;

  // Non fee-bearing actions are defined on 20-39
  astria.protocol.fees.v1alpha1.IbcRelayFeeComponents ibc_relay = 20;
  astria.protocol.fees.v1alpha1.ValidatorUpdateFeeComponents validator_update = 21;
  astria.protocol.fees.v1alpha1.FeeAssetChangeFeeComponents fee_asset_change = 22;
  astria.protocol.fees.v1alpha1.FeeChangeFeeComponents fee_change = 23;
  astria.protocol.fees.v1alpha1.IbcRelayerChangeFeeComponents ibc_relayer_change = 24;
  astria.protocol.fees.v1alpha1.SudoAddressChangeFeeComponents sudo_address_change = 25;
  astria.protocol.fees.v1alpha1.IbcSudoChangeFeeComponents ibc_sudo_change = 26;
}
